continue expanding finemapr and trying to fix

--- a/kathryn/bulk_data/finemapping/finemap/finemap_attempt1.Rmd
+++ b/kathryn/bulk_data/finemapping/finemap/finemap_attempt1.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "R Notebook"
+title: "Use FINEMAPR to use FINEMAP, Caviar, and "
 output: html_notebook
 ---
-
+///
 FINEMAP
 
 http://www.christianbenner.com/
